Solved homework 3
